Employment type and employer details forms

--- a/src/app/form/employment-and-employer-info-form/employment-and-employer-info-form.component.html
+++ b/src/app/form/employment-and-employer-info-form/employment-and-employer-info-form.component.html
@@ -1,1 +1,21 @@
-<p>employment-and-employer-info-form works!</p>
+<div *ngrxLet="form$ as form" class="mx-auto max-w-sm">
+  <h1 class="mb-4 text-2xl leading-none font-semibold text-gray-900">
+    Employment and employer's information
+  </h1>
+
+  <form [ngrxFormState]="form" class="flex flex-col gap-y-5">
+    <employment-type-form [form]="form.controls.employmentDetails" />
+
+    <employer-details-form [form]="form.controls.employerInformation" />
+
+    <div>
+      <button
+        type="button"
+        class="cursor-pointer rounded-lg bg-blue-500 px-3 py-2 text-sm font-medium text-white hover:bg-blue-600 focus:ring-4 focus:ring-blue-300 focus:outline-none"
+        routerLink=".."
+      >
+        Continue
+      </button>
+    </div>
+  </form>
+</div>
