Employment details form

--- a/src/app/form/employment-and-employer-info-form/employment-and-employer-info-form.component.html
+++ b/src/app/form/employment-and-employer-info-form/employment-and-employer-info-form.component.html
@@ -17,9 +17,12 @@
     />
 
     @if (isTimeloss) {
-      <!-- employment details-->
+      <employment-details-form [form]="form.controls.employmentDetails" />
+
       <!-- shift information -->
+
       <!-- earnings -->
+
       <!-- return to work -->
     }
 
