Scaffold shift info form

--- a/src/app/form/employment-and-employer-info-form/employment-and-employer-info-form.component.html
+++ b/src/app/form/employment-and-employer-info-form/employment-and-employer-info-form.component.html
@@ -18,11 +18,8 @@
 
     @if (isTimeloss) {
       <employment-details-form [form]="form.controls.employmentDetails" />
-
-      <!-- shift information -->
-
+      <shift-info-form [form]="form.controls.shiftInformation" />
       <!-- earnings -->
-
       <!-- return to work -->
     }
 
